--- a/README.rdoc
+++ b/README.rdoc
@@ -5,24 +5,21 @@ application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version and Rails Version
+  2.2.0@rails4
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
 
 * How to run the test suite
+  -> localhost:puerto/locations
 
-* Services (job queues, cache servers, search engines, etc.)
 
 * Deployment instructions
+  -> rake db:setup
 
-* ...
 
+* Nota: Aplicación para buscar los barrios dependiendo de la dirección y ciudad.
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+Demo: http://zorencen-googlemaps.herokuapp.com/locations
